--- a/main.ipynb
+++ b/main.ipynb
@@ -2,21 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "fee38a4b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-1"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import cv2\n",
     "import numpy as np\n",
@@ -29,7 +18,7 @@
     "cap.set(3, 720) # Width\n",
     "cap.set(4, 1280) # Lenght\n",
     "\n",
-    "\n",
+    "mp_drawing = mp.solutions.drawing_utils\n",
     "mp_face_mesh = mp.solutions.face_mesh\n",
     "mp_drawing_styles = mp.solutions.drawing_styles\n",
     "\n",
@@ -39,6 +28,7 @@
     "drawing_spec = mp_drawing.DrawingSpec(thickness=1, circle_radius=1)\n",
     "\n",
     "#Зацикливаем получение кадров от камеры\n",
+    "flag = 0\n",
     "while True:\n",
     "    with mp_face_mesh.FaceMesh(max_num_faces=1, refine_landmarks=True,min_detection_confidence=0.5,\n",
     "                               min_tracking_confidence=0.5) as face_mesh:\n",
@@ -60,28 +50,9 @@
     "        \n",
     "        if results.multi_face_landmarks:\n",
     "            for face_landmarks in results.multi_face_landmarks:\n",
-    "                mp_drawing.draw_landmarks(\n",
-    "                image=image,\n",
-    "                landmark_list=face_landmarks,\n",
-    "                connections=mp_face_mesh.FACEMESH_TESSELATION,\n",
-    "                landmark_drawing_spec=None,\n",
-    "                connection_drawing_spec=mp_drawing_styles\n",
-    "                .get_default_face_mesh_tesselation_style())\n",
-    "            mp_drawing.draw_landmarks(\n",
-    "                image=image,\n",
-    "                landmark_list=face_landmarks,\n",
-    "                connections=mp_face_mesh.FACEMESH_CONTOURS,\n",
-    "                landmark_drawing_spec=None,\n",
-    "                connection_drawing_spec=mp_drawing_styles\n",
-    "                .get_default_face_mesh_contours_style())\n",
-    "            mp_drawing.draw_landmarks(\n",
-    "                image=image,\n",
-    "                landmark_list=face_landmarks,\n",
-    "                connections=mp_face_mesh.FACEMESH_IRISES,\n",
-    "                landmark_drawing_spec=None,\n",
-    "                connection_drawing_spec=mp_drawing_styles\n",
-    "                .get_default_face_mesh_iris_connections_style())\n",
-    "\n",
+    "                a = mp_drawing.draw_landmarks(image=image,\n",
+    "                    landmark_list=face_landmarks,\n",
+    "                    landmark_drawing_spec=None)\n",
     "        \n",
     "        cTime = time.time()\n",
     "        fps = 1/(cTime-pTime)\n",
@@ -100,7 +71,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "id": "74c13de1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "print(np.multiply((1, 2 ,4), ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "61b0196a",
    "metadata": {},
    "outputs": [],
@@ -169,8 +151,31 @@
     "cap = cv2.VideoCapture(0)\n",
     "for imgnum in range(number_images):\n",
     "    print(f'Image: {imgnum}')\n",
+    "    \n",
     "    ret, frame = cap.read()\n",
     "    imgname = os.path.join(IMAGES_PATH, f'{str(uuid.uuid4())}.jpg')\n",
+    "    \n",
+    "    with mp_face_mesh.FaceMesh(max_num_faces=1, refine_landmarks=True) as face_mesh:\n",
+    "        frame.flags.writeable = False\n",
+    "        # Меняем цветовую гамму\n",
+    "        frame = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
+    "        # Либа по посторойке координат на лице\n",
+    "        results = face_mesh.process(image)\n",
+    "        \n",
+    "        image.flags.writeable = True\n",
+    "        # Возвращаем цвет обратно\n",
+    "        image = cv2.cvtColor(image, cv2.COLOR_RGB2BGR)\n",
+    "        \n",
+    "        face_landmarks = results.multi_face_landmarks[0]\n",
+    "        \n",
+    "        if face_landmarks:\n",
+    "            mp_drawing.draw_landmarks(image=image, landmark_list=face_landmarks,\n",
+    "                    connections=mp_face_mesh.FACEMESH_TESSELATION,\n",
+    "                    landmark_drawing_spec=None,\n",
+    "                    connection_drawing_spec=mp_drawing_styles\n",
+    "                    .get_default_face_mesh_tesselation_style())\n",
+    "            \n",
+    "    \n",
     "    cv2.imwrite(imgname, frame)\n",
     "    cv2.imshow('frame', frame)\n",
     "    time.sleep(0.2)\n",
@@ -180,6 +185,57 @@
     "\n",
     "cap.release()\n",
     "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61b0794a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# For static images:\n",
+    "IMAGE_FILES = []\n",
+    "drawing_spec = mp_drawing.DrawingSpec(thickness=1, circle_radius=1)\n",
+    "\n",
+    "with mp_face_mesh.FaceMesh(\n",
+    "    static_image_mode=True,\n",
+    "    max_num_faces=1,\n",
+    "    refine_landmarks=True,\n",
+    "    min_detection_confidence=0.5) as face_mesh:\n",
+    "  for idx, file in enumerate(IMAGE_FILES):\n",
+    "    image = cv2.imread(file)\n",
+    "    # Convert the BGR image to RGB before processing.\n",
+    "    results = face_mesh.process(cv2.cvtColor(image, cv2.COLOR_BGR2RGB))\n",
+    "\n",
+    "    # Print and draw face mesh landmarks on the image.\n",
+    "    if not results.multi_face_landmarks:\n",
+    "      continue\n",
+    "    annotated_image = image.copy()\n",
+    "    for face_landmarks in results.multi_face_landmarks:\n",
+    "      print('face_landmarks:', face_landmarks)\n",
+    "      mp_drawing.draw_landmarks(\n",
+    "          image=annotated_image,\n",
+    "          landmark_list=face_landmarks,\n",
+    "          connections=mp_face_mesh.FACEMESH_TESSELATION,\n",
+    "          landmark_drawing_spec=None,\n",
+    "          connection_drawing_spec=mp_drawing_styles\n",
+    "          .get_default_face_mesh_tesselation_style())\n",
+    "      mp_drawing.draw_landmarks(\n",
+    "          image=annotated_image,\n",
+    "          landmark_list=face_landmarks,\n",
+    "          connections=mp_face_mesh.FACEMESH_CONTOURS,\n",
+    "          landmark_drawing_spec=None,\n",
+    "          connection_drawing_spec=mp_drawing_styles\n",
+    "          .get_default_face_mesh_contours_style())\n",
+    "      mp_drawing.draw_landmarks(\n",
+    "          image=annotated_image,\n",
+    "          landmark_list=face_landmarks,\n",
+    "          connections=mp_face_mesh.FACEMESH_IRISES,\n",
+    "          landmark_drawing_spec=None,\n",
+    "          connection_drawing_spec=mp_drawing_styles\n",
+    "          .get_default_face_mesh_iris_connections_style())\n",
+    "    cv2.imwrite('/tmp/annotated_image' + str(idx) + '.png', annotated_image)"
    ]
   },
   {
